--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>AccountsHub</title>
+    <title>Accountshub</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -11,7 +11,8 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@700;800&display=swap"
+        rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -41,7 +42,7 @@
             box-shadow: 2px 2px 3px #999;
             z-index: 100;
         }
-        
+
         .my-float {
             margin-top: 16px;
         }
@@ -51,7 +52,8 @@
 <body>
     <div class="container-xxl bg-white p-0">
         <!-- Spinner Start -->
-        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        <div id="spinner"
+            class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
@@ -62,65 +64,100 @@
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
             <a href="index.html" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
-                <h1 class="m-0 text-primary">Account Managers Kenya</h1>
+                <h1 class="m-0 text-primary">AccountsHub</h1>
             </a>
-            <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
+                data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="User Profile pg1.html" class="nav-item nav-link">Sell account</a>
-                    <a href="User Profile pg2.html" class="nav-item nav-link">Get manager</a>
-                    <a href="User Profile pg3.html" class="nav-item nav-link ">Freelancer</a>
-                    <a href="user profile pg4.html" class="nav-item nav-link active">listing</a>
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a id="logoutBtn" href="index.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">log out<i class="fa fa-arrow-right ms-3"></i></a>
+                <a href="register.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Register<i
+                        class="fa fa-arrow-right ms-3"></i></a>
             </div>
         </nav>
         <!-- Navbar End -->
 
 
-        <!-- table starts -->
+        <!-- Header End -->
+        <div class="container-xxl py-5 bg-dark page-header mb-5">
+            <div class="container my-5 pt-5 pb-4">
+                <h1 class="display-3 text-white mb-3 animated slideInDown">About Us</h1>
 
-        <div id="" class="container-xxl py-5">
+            </div>
+        </div>
+        <!-- Header End -->
+
+
+        <!-- About Us Start -->
+
+        <div class="container-xxl py-5">
             <div class="container">
-                <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">My listing</h1>
-                <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="tab-content">
-                        <div id="tab-1" class="tab-pane fade show p-0 active">
-                            <div class="job-item p-4 mb-4">
-                                <div class="row g-4">
-                                    <div class="col-sm-12 col-md-8 d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-2.jpg" alt="" style="width: 80px; height: 80px;">
-                                        <div class="text-start ps-4">
-                                            <h5 class="mb-3">Captioning</h5>
-                                            <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Manchester UK</span>
-                                            <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Featured</span>
-                                            <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$125</span>
-                                        </div>
+                <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">About Us</h1>
+                <div class="row g-4">
+                    <div class="col-12">
+                        <div class="row gy-4">
+                            <div class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
+                                <div class="d-flex align-items-center bg-light rounded p-4">
+                                    <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                        style="width: 45px; height: 45px;">
+                                        <i class="fa fa-map-marker-alt text-primary"></i>
                                     </div>
-                                    <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
-                                        <div class="d-flex mb-3">
-                                            <a class="btn btn-primary" id="deleteListing">Delete</a>
-                                            <p id="phoneNumber" style="display: none;">Phone: 0700407423</p>
-                                        </div>
-                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2045</small>
-                                    </div>
+                                    <span>Nairobi West, Nairobi, Kenya</span>
                                 </div>
                             </div>
+                            <div class="col-md-4 wow fadeIn" data-wow-delay="0.3s">
+                                <div class="d-flex align-items-center bg-light rounded p-4">
+                                    <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                        style="width: 45px; height: 45px;">
+                                        <i class="fa fa-envelope-open text-primary"></i>
+                                    </div>
+                                    <span>Info@AccountManagement.com</span>
+                                </div>
+                            </div>
+                            <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="d-flex align-items-center bg-light rounded p-4">
+                                    <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                        style="width: 45px; height: 45px;">
+                                        <i class="fa fa-phone-alt text-primary"></i>
+                                    </div>
+                                    <span>+254700407423</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="wow fadeInUp" data-wow-delay="0.5s">
+                            <p>Welcome to AccountsHub, your premier online platform for buying and selling verified
+                                accounts across various categories. Our mission is to provide a safe and secure
+                                marketplace for individuals and businesses to trade a wide range of account types,
+                                including transcription accounts, writing accounts, microservice accounts, and more.</p>
+                            <p>With a team of experts dedicated to ensuring the authenticity and reliability of every
+                                account listed on our platform, we strive to offer a seamless experience for both buyers
+                                and sellers. Whether you're in need of established transcription accounts, writing
+                                profiles, or microservice access, or if you're looking to sell your own accounts,
+                                AccountsHub is here to facilitate the process.</p>
+                            <p>At AccountsHub, we prioritize transparency, security, and customer satisfaction. Our
+                                robust verification process and secure transaction methods give you peace of mind when
+                                conducting business on our platform. Additionally, our account management features allow
+                                you to easily post your accounts for sale and efficiently manage your listings.</p>
+                            <p>Thank you for choosing AccountsHub as your trusted partner in account trading and
+                                management. We are dedicated to serving your account-related needs and look forward to
+                                assisting you in achieving your goals.</p>
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- table End -->
-        <!-- phone button starts-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <a href="tel:+254 700407423" class="float" target="_blank">
-            <i class="fa fa-phone my-float"></i>
-        </a>
-        <!-- phone button ends -->
+
+
+        <!-- About Us End -->
+
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -146,10 +183,12 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Subscribe</h5>
-                        <p>Send us your email to be updated on everything about accounts manager kenya every day</p>
+                        <p>Send us your email to be updated on everything about accounts hub every day</p>
                         <div class="position-relative mx-auto" style="max-width: 400px;">
-                            <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                            <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                            <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text"
+                                placeholder="Your email">
+                            <button type="button"
+                                class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                         </div>
                     </div>
                 </div>
@@ -158,7 +197,7 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Accounts Manager Kenya</a>, All Right Reserved. Designed By <a
+                            &copy; <a class="border-bottom" href="#">AccountsHub</a>, All Right Reserved. Designed By <a
                                 class="border-bottom" href="">AccountsHub</a>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
@@ -184,33 +223,9 @@
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-    <script>
-        // Assuming your server API endpoint for deleting a listing is '/delete-listing'
-        // You should replace this with the actual endpoint of your server.
-
-        $(document).ready(function() {
-            $('#deleteListing').on('click', function() {
-                if (confirm('Are you sure you want to delete this listing?')) {
-                    $.ajax({
-                        url: '/delete-listing', // Replace with your server endpoint
-                        type: 'POST', // You can use 'DELETE' as the HTTP method for deletion
-                        success: function(response) {
-                            // Handle success, e.g., remove the listing from the UI
-                            console.log('Listing deleted successfully');
-                        },
-                        error: function(error) {
-                            // Handle errors, e.g., show an error message
-                            console.error('Error deleting listing', error);
-                        }
-                    });
-                }
-            });
-        });
-    </script>
 </body>
 
 </html>
