--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Account Managers Kenya</title>
+    <title>Accountshub</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -62,7 +62,7 @@
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
             <a href="index.html" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
-                <h1 class="m-0 text-primary">Account Managers Kenya</h1>
+                <h1 class="m-0 text-primary">AccountsHub</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -186,7 +186,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Subscribe</h5>
-                        <p>Send us your email to be updated on everything about accounts manager kenya every day</p>
+                        <p>Send us your email to be updated on everything about accounts hub every day</p>
                         <div class="position-relative mx-auto" style="max-width: 400px;">
                             <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                             <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
@@ -198,7 +198,8 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Accounts Manager Kenya</a>, All Right Reserved. Designed By <a class="border-bottom" href="">Gladys Wanjiku Mise</a>
+                            &copy; <a class="border-bottom" href="#">AccountsHub</a>, All Right Reserved. Designed By <a class="border-bottom"
+                                href="">AccountsHub</a>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <!--  -->
