--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@
                     <a href="#managed" class="nav-item nav-link">Accounts</a>
                     <a href="#testimonial" class="nav-item nav-link">Testmonials</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="aboutus.html" class="nav-item nav-link">About Us</a>
                 </div>
                 <a href="#" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Sell Your Account<i class="fa fa-arrow-right ms-3"></i></a>
             </div>
         </nav>
         <!-- Navbar End -->
+
+        
 
 
         <!-- Carousel Start -->
