--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Account Managers Kenya</title>
+    <title>AccountsHub</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -62,7 +62,7 @@
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
             <a href="index.html" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
-                <h1 class="m-0 text-primary">Account Managers Kenya</h1>
+                <h1 class="m-0 text-primary">AccountsHub</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -97,11 +97,10 @@
                 <p>Please fill in this form to create an account.</p>
                 <hr>
 
-                <label for="yourname"><b>Name</b></label>
+                <label for="yourname"><b>User Name</b></label>
                 <input type="text" placeholder="Enter name" name="yourname" id="yourname" required>
 
-                <label for="phone"><b>Phone</b></label><br>
-                <input type="number" placeholder="Enter phone" name="phone" id="phone" required>
+                
                 <br>
                 <label for="email"><b>Email</b></label>
                 <input type="text" placeholder="Enter Email" name="email" id="email" required>
@@ -167,7 +166,8 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Accounts Manager Kenya</a>, All Right Reserved. Designed By <a class="border-bottom" href="">Gladys Wanjiku Mise</a>
+                            &copy; <a class="border-bottom" href="#">AccountsHub</a>, All Right Reserved. Designed By <a class="border-bottom"
+                                href="">AccountsHub</a>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <!--  -->
@@ -185,6 +185,7 @@
         <div class="loading">
             <div class="loader"></div>
         </div>
+
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -194,6 +195,7 @@
         <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
         <!-- Template Javascript -->
+
         <script src="js/main.js"></script>
 </body>
 
