--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                                             <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Featured</span>
                                             <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$125</span>
                                         </div>
+
                                     </div>
                                     <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
                                         <div class="d-flex mb-3">
@@ -381,6 +382,15 @@
             showPhoneNumberButton.textContent = buttonTextOptions[currentIndex];
         });
     </script>
+<script>
+    window.embeddedChatbotConfig = {
+        chatbotId: "4kaN3NP9z1c5d0UVoiCaO",
+        domain: "www.chatbase.co"
+    }
+</script>
+<script src="https://www.chatbase.co/embed.min.js" chatbotId="4kaN3NP9z1c5d0UVoiCaO" domain="www.chatbase.co" defer>
+</script>
+
 </body>
 
 </html>
