--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>AccountsHub</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    
+
     <meta content="" name="keywords">
     <meta content="" name="description">
 
@@ -177,7 +179,8 @@
                         </a>
                     </div>
                     <div class="list-group-item-secondary" data-wow-delay="0.1s">
-                        <img src="img/5ff90f800d861d4cd0e3f6d0_remotasks-logo.png" alt="">
+                        <img src="img/5ff90f800d861d4cd0e3f6d0_remotasks-logo.png" alt="" class="img-fluid">
+
                         </a>
                     </div>
                 </div>
