--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <a href="#" class="nav-item nav-link active">Home</a>
-                    <a href="#category" class="nav-item nav-link">Work</a>
+                    <a href="#category" class="nav-item nav-link">Services</a>
                     <a href="#managed" class="nav-item nav-link">Accounts</a>
                     <a href="#testimonial" class="nav-item nav-link">Testmonials</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
