--- a/User Profile pg2.html
+++ b/User Profile pg2.html
@@ -89,20 +89,14 @@
                         <div class="formbold-input-flex">
                             <h4>Get a professional account manager</h4>
                             <div>
-                                <label for="firstname" class="formbold-form-label"> Add Title </label>
+                                <label for="firstname" class="formbold-form-label"> Account Name</label>
                                 <input type="text" name="firstname" id="firstname" placeholder="Writers Kenya" class="formbold-form-input" />
                             </div>
-                            <div>
-                                <label for="lastname" class="formbold-form-label"> Sub title </label>
-                                <input type="text" name="lastname" id="lastname" placeholder="Writers club" class="formbold-form-input" />
-                            </div>
+                            
                         </div>
 
                         <div class="formbold-input-flex">
-                            <div>
-                                <label for="email" class="formbold-form-label"> Account link </label>
-                                <input type="email" name="email" id="email" placeholder="www.sth.com" class="formbold-form-input" />
-                            </div>
+                            
                             <div>
                                 <label for="phone" class="formbold-form-label"> Phone number </label>
                                 <input type="text" name="phone" id="phone" placeholder="+254 700 0000 000" class="formbold-form-input" />
