--- a/index.html
+++ b/index.html
@@ -82,13 +82,11 @@
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                     <a href="aboutus.html" class="nav-item nav-link">About Us</a>
                 </div>
-                <a href="#" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Sell Your Account<i class="fa fa-arrow-right ms-3"></i></a>
+                <a href="enroll.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Enroll<i
+                        class="fa fa-arrow-right ms-3"></i></a>
             </div>
         </nav>
         <!-- Navbar End -->
-
-        
-
 
         <!-- Carousel Start -->
         <div class="container-fluid p-0">
@@ -198,6 +196,7 @@
         <div id="" class="container-xxl py-5">
             <div class="container">
                 <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Available Accounts</h1>
+                <ul id="accountList"></ul>
                 <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.3s">
                     <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
 
@@ -357,6 +356,8 @@
         </div>
         <!-- Footer End -->
 
+        
+
         <!-- Back to Top -->
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
@@ -370,6 +371,7 @@
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="/js/index.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
@@ -396,6 +398,8 @@
 </script>
 <script src="https://www.chatbase.co/embed.min.js" chatbotId="4kaN3NP9z1c5d0UVoiCaO" domain="www.chatbase.co" defer>
 </script>
+
+
 
 </body>
 
