--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,8 @@
             margin-top: 16px;
         }
 
-        /* Additional style for contact form */
         .contact-container {
-            margin-top: 100px; /* Adjust this value as needed */
+            margin-top: 100px;
         }
 
         .contact-container form {
@@ -92,10 +91,10 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="contact.html" class="nav-item nav-link">Contact Us</a>
-                </div>
+            </div>
         </div>
-        </nav>
-        <!-- Navbar End -->
+    </nav>
+    <!-- Navbar End -->
 
     <!-- Contact Form -->
     <div class="container contact-container">
@@ -108,15 +107,15 @@
                     <input id="name" type="text" placeholder="Full Name" required>
                 </span>
                 <span>
-                    <label for="subject">Subject</label></br>
+                    <label for="subject">Subject</label><br />
                     <input id="subject" type="text" placeholder="Subject" required>
                 </span>
             </div>
             <label for="message">Your Message</label><br />
             <textarea name="" id="message" rows="10" placeholder="Your Message" required></textarea>
             <button type="button" onclick="sendToWhatsapp()">Submit</button>
-            </form>
-            </div>
+        </form>
+        </div>
 
     <!-- phone button starts-->
     <a href="tel:+254700407423" class="float" target="_blank">
@@ -136,7 +135,7 @@
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Your custom JavaScript file (app.js) -->
-    <script src="app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 
 </html>
