enroll for classes

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                     <a href="aboutus.html" class="nav-item nav-link">About Us</a>
                 </div>
-                <a href="enroll.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Enroll<i
+                <a href="enroll.html" target="_blank" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Enroll<i
                         class="fa fa-arrow-right ms-3"></i></a>
             </div>
         </nav>
